frontend/src/App.scss
#headerLogo {
  width: 60px;
  height: 60px;
  @extend .d-inline-block, .align-top
}

nav.navbar-oih.navbar.navbar-expand-lg.navbar-light {
  background-color: #21295c;
}

.primary-bg {
    background-color: #21295c;
}

.text-light-blue-alt {
  color: #06bce5;
  font-weight: 700;
  font-size: 2em;
}

.primary-color-alt {
  color: #06bce5;
}

.primary-color {
  color: #21295c;
}

a.text-light.menu-text.nav-link {
  padding-left: 5em;
  font-weight: 600;
}

.bg-alt {
  color: #06bce5;
}

.searchbg {
  min-height: 55vh;
  background-image: url("resources/Photo Africa Coast Original.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 75% 60%;
}

.searchbg-alt {
  min-height: 10vh;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 75% 60%;
  background-color: #21295c;
}

.result-search {
  margin: 0 auto;
}

.spacer {
  margin-top: 4em;
  margin-bottom: 10em;
}

.clear-btn {
  all: unset;
  cursor: pointer;
  color: #06bce5;
}

.result-item {
  border-bottom: 1.2px solid #95a5a6;
}
.result-title {
  text-decoration: none;
  color: #21295c;
}

.result-title:hover {
  text-decoration: underline;
}

p.result-p {
    text-align: left;
  margin-bottom: 0.5em;
}

p.result-p.truncate {
    width: 50%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.description-truncate {
 display: -webkit-box;
    max-width: 100%;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
    overflow: hidden;
}

.pagination {
    text-transform: capitalize;
}

.bubble {
  margin-right: 8.5% !important;
  margin-left: 10% !important;
  padding-top: 4% !important;
  margin-top: 4% !important;
}

#root {
  text-align: center;
  background: #f3f2f2;
  min-height: 100vh;
}

.react-tabs__tab:focus::after {
  display: none !important;
}

/*=====*/
/* results*/
#expert {
  width: 300%;
}

.narrow {
  max-width: 20%;
}

.truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

/* UNDONE, super hacky css to get the map to show up */
.exp-map {
  min-height: 500px;
  height: 500px;
  width: 112%;
}

.exp-map__title {
  display: none;
}

#resultsDiv {
  width: 112%;
}

.buttonHolder {
  margin-top: 1% !important;
}

